--- a/style-editor.css
+++ b/style-editor.css
@@ -1549,16 +1549,36 @@ body {
   position: relative;
 }
 
-.bottom-full {
-  bottom: 100%;
-}
-
 .left-0 {
   left: 0px;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.-top-28 {
+  top: -7rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.-top-4 {
+  top: -1rem;
+}
+
+.bottom-full {
+  bottom: 100%;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.z-\[99999\] {
+  z-index: 99999;
 }
 
 .z-10 {
@@ -1573,28 +1593,12 @@ body {
   z-index: 20;
 }
 
-.z-\[\] {
-  z-index: ;
-}
-
-.z-\[99999\] {
-  z-index: 99999;
-}
-
-.z-50 {
-  z-index: 50;
-}
-
-.-z-50 {
-  z-index: -50;
-}
-
-.-z-10 {
-  z-index: -10;
-}
-
 .m-auto {
   margin: auto;
+}
+
+.m-2 {
+  margin: 0.5rem;
 }
 
 .mx-auto {
@@ -1617,6 +1621,22 @@ body {
   margin-right: 1.75rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -1637,8 +1657,8 @@ body {
   margin-top: 5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .mb-0 {
@@ -1653,6 +1673,18 @@ body {
   margin-top: 0.25rem;
 }
 
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
 .-mr-4 {
   margin-right: -1rem;
 }
@@ -1663,34 +1695,6 @@ body {
 
 .-mb-1 {
   margin-bottom: -0.25rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mt-28 {
-  margin-top: 7rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-9 {
-  margin-top: 2.25rem;
 }
 
 .block {
@@ -1713,8 +1717,24 @@ body {
   aspect-ratio: 16/9;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-6 {
   height: 1.5rem;
+}
+
+.h-\[426px\] {
+  height: 426px;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-5 {
@@ -1729,32 +1749,28 @@ body {
   height: 0px;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
 .w-full {
   width: 100%;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
 .w-6 {
   width: 1.5rem;
+}
+
+.w-56 {
+  width: 14rem;
+}
+
+.w-9\/12 {
+  width: 75%;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .w-80 {
@@ -1765,60 +1781,8 @@ body {
   width: 1.25rem;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
-.w-screen {
-  width: 100vw;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.max-w-max-content {
-  max-width: 1232px;
-}
-
-.max-w-screen-2xl {
-  max-width: 1536px;
-}
-
-.max-w-screen-xl {
-  max-width: 1280px;
-}
-
 .max-w-5xl {
   max-width: 64rem;
-}
-
-.max-w-3xl {
-  max-width: 48rem;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
-}
-
-.max-w-\[2xl\] {
-  max-width: 2xl;
-}
-
-.max-w-\[700px\] {
-  max-width: 700px;
-}
-
-.max-w-\[710px\] {
-  max-width: 710px;
-}
-
-.max-w-\[720px\] {
-  max-width: 720px;
 }
 
 .max-w-\[730px\] {
@@ -1829,8 +1793,24 @@ body {
   max-width: 72rem;
 }
 
-.grow {
-  flex-grow: 1;
+.max-w-max-content {
+  max-width: 1232px;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
+}
+
+.max-w-screen-2xl {
+  max-width: 1536px;
+}
+
+.max-w-screen-xl {
+  max-width: 1280px;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -1843,6 +1823,10 @@ body {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
 }
 
 .flex-wrap {
@@ -1877,8 +1861,16 @@ body {
   gap: 3rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.rounded-\[2rem\] {
+  border-radius: 2rem;
 }
 
 .rounded-2xl {
@@ -1889,20 +1881,20 @@ body {
   border-radius: 0.75rem;
 }
 
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-\[2rem\] {
-  border-radius: 2rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -1923,13 +1915,37 @@ body {
   border-color: rgb(249 250 251 / var(--tw-border-opacity));
 }
 
+.border-secondary {
+  --tw-border-opacity: 1;
+  border-color: rgb(43 212 217 / var(--tw-border-opacity));
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .border-opacity-60 {
   --tw-border-opacity: 0.6;
+}
+
+.border-opacity-10 {
+  --tw-border-opacity: 0.1;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 212 217 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1942,9 +1958,14 @@ body {
   background-color: rgb(244 244 244 / var(--tw-bg-opacity));
 }
 
-.bg-secondary {
+.bg-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(43 212 217 / var(--tw-bg-opacity));
+  background-color: rgb(84 51 237 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .bg-gray-200 {
@@ -1952,22 +1973,12 @@ body {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-primary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(84 51 237 / var(--tw-bg-opacity));
+.bg-opacity-\[0\.25\] {
+  --tw-bg-opacity: 0.25;
 }
 
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
-}
-
-.bg-opacity-\[0\.25\] {
-  --tw-bg-opacity: 0.25;
 }
 
 .bg-gradient-to-b {
@@ -1996,26 +2007,40 @@ body {
   background-repeat: no-repeat;
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.p-3 {
-  padding: 0.75rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .p-6 {
   padding: 1.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-3\.5 {
+  padding: 0.875rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .px-4 {
@@ -2028,19 +2053,39 @@ body {
   padding-bottom: 1rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .px-10 {
@@ -2068,38 +2113,12 @@ body {
   padding-right: 1.75rem !important;
 }
 
-.py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
 .pb-12 {
   padding-bottom: 3rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pt-32 {
-  padding-top: 8rem;
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pb-5 {
@@ -2112,6 +2131,34 @@ body {
 
 .pl-10 {
   padding-left: 2.5rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pb-44 {
+  padding-bottom: 11rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .text-left {
@@ -2136,6 +2183,11 @@ body {
   line-height: 1.75rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -2151,11 +2203,6 @@ body {
   line-height: 1rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -2168,18 +2215,12 @@ body {
   line-height: 1.5rem;
 }
 
+.leading-7 {
+  line-height: 1.75rem;
+}
+
 .leading-none {
   line-height: 1;
-}
-
-.text-secondary {
-  --tw-text-opacity: 1;
-  color: rgb(43 212 217 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-primary {
@@ -2187,13 +2228,40 @@ body {
   color: rgb(84 51 237 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(43 212 217 / var(--tw-text-opacity));
+}
+
+.text-\[\#9C90B5\] {
+  --tw-text-opacity: 1;
+  color: rgb(156 144 181 / var(--tw-text-opacity));
+}
+
 .opacity-100 {
   opacity: 1;
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-button-primary {
   --tw-shadow: 0 10px 25px #5433ED52;
   --tw-shadow-colored: 0 10px 25px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-custom {
+  --tw-shadow: 0px 0px 70px rgba(0, 0, 0, 0.06);
+  --tw-shadow-colored: 0px 0px 70px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2244,17 +2312,19 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@media (min-width: 640px) {
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 768px) {
   .md\:mb-8 {
     margin-bottom: 2rem;
   }
 
-  .md\:w-20 {
-    width: 5rem;
-  }
-
-  .md\:w-16 {
-    width: 4rem;
+  .md\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .md\:max-w-\[51\%\] {
@@ -2265,6 +2335,10 @@ body {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-7 {
+    grid-template-columns: repeat(7, minmax(0, 1fr));
+  }
+
   .md\:p-12 {
     padding: 3rem;
   }
@@ -2272,6 +2346,11 @@ body {
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:pb-28 {
@@ -2513,16 +2592,20 @@ body {
     margin-right: -0.5rem;
   }
 
-  .lg\:mt-16 {
-    margin-top: 4rem;
-  }
-
   .lg\:mt-12 {
     margin-top: 3rem;
   }
 
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .lg\:mt-16 {
+    margin-top: 4rem;
   }
 
   .lg\:w-4\/12 {
@@ -2559,6 +2642,14 @@ body {
     padding-right: 3rem;
   }
 
+  .lg\:pr-28 {
+    padding-right: 7rem;
+  }
+
+  .lg\:pb-48 {
+    padding-bottom: 12rem;
+  }
+
   .lg\:pt-0 {
     padding-top: 0px;
   }
@@ -2571,22 +2662,14 @@ body {
     padding-bottom: 0px;
   }
 
-  .lg\:pr-28 {
-    padding-right: 7rem;
-  }
-
-  .lg\:pb-48 {
-    padding-bottom: 12rem;
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
-  }
-
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .lg\:text-\[2\.875rem\] {
@@ -3074,6 +3157,14 @@ body {
     margin-right: 0px;
   }
 
+  .xl\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .xl\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
   .xl\:mt-0 {
     margin-top: 0px;
   }
@@ -3082,8 +3173,8 @@ body {
     margin-bottom: 3.5rem;
   }
 
-  .xl\:mt-52 {
-    margin-top: 13rem;
+  .xl\:mt-56 {
+    margin-top: 14rem;
   }
 
   .xl\:block {
@@ -3092,6 +3183,22 @@ body {
 
   .xl\:flex {
     display: flex;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
+  .xl\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .xl\:w-3\/5 {
+    width: 60%;
+  }
+
+  .xl\:w-full {
+    width: 100%;
   }
 
   .xl\:flex-row {
@@ -3106,6 +3213,10 @@ body {
     align-items: center;
   }
 
+  .xl\:gap-20 {
+    gap: 5rem;
+  }
+
   .xl\:bg-none {
     background-image: none;
   }
@@ -3113,6 +3224,10 @@ body {
   .xl\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .xl\:pr-16 {
+    padding-right: 4rem;
   }
 
   .xl\:pb-20 {
@@ -3123,10 +3238,6 @@ body {
     padding-bottom: 0px;
   }
 
-  .xl\:pr-16 {
-    padding-right: 4rem;
-  }
-
   .xl\:text-left {
     text-align: left;
   }
@@ -3134,20 +3245,24 @@ body {
   .xl\:text-start {
     text-align: start;
   }
+
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .xl\:text-\[2\.875rem\] {
+    font-size: 2.875rem;
+  }
+
+  .xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:mt-80 {
-    margin-top: 20rem;
-  }
-
   .\32xl\:pb-\[5rem\] {
     padding-bottom: 5rem;
-  }
-}
-
-@media (min-width: 1447px) {
-  .m2xl\:mb-24 {
-    margin-bottom: 6rem;
   }
 }
