direct sales updates

--- a/style-editor.css
+++ b/style-editor.css
@@ -2331,6 +2331,10 @@ body {
   background-size: contain;
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
 .bg-top {
   background-position: top;
 }
@@ -2549,6 +2553,10 @@ body {
 
 .pb-48 {
   padding-bottom: 12rem;
+}
+
+.pt-28 {
+  padding-top: 7rem;
 }
 
 .text-left {
@@ -3127,6 +3135,10 @@ body {
     margin-right: 2rem;
   }
 
+  .lg\:mt-24 {
+    margin-top: 6rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -3308,6 +3320,10 @@ body {
     padding-left: 1.5rem;
   }
 
+  .lg\:pt-32 {
+    padding-top: 8rem;
+  }
+
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -3335,6 +3351,11 @@ body {
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
