--- a/style.css
+++ b/style.css
@@ -2742,6 +2742,10 @@ body {
   background-size: contain;
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
 .bg-top {
   background-position: top;
 }
@@ -2960,6 +2964,10 @@ body {
 
 .pb-48 {
   padding-bottom: 12rem;
+}
+
+.pt-28 {
+  padding-top: 7rem;
 }
 
 .text-left {
@@ -3538,6 +3546,10 @@ body {
     margin-right: 2rem;
   }
 
+  .lg\:mt-24 {
+    margin-top: 6rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -3719,6 +3731,10 @@ body {
     padding-left: 1.5rem;
   }
 
+  .lg\:pt-32 {
+    padding-top: 8rem;
+  }
+
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -3746,6 +3762,11 @@ body {
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
