--- a/style-editor.css
+++ b/style-editor.css
@@ -1549,6 +1549,11 @@ body {
   position: relative;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .inset-x-1\/2 {
   left: 50%;
   right: 50%;
@@ -1825,6 +1830,14 @@ body {
   margin-bottom: -0.25rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -1939,6 +1952,12 @@ body {
 
 .h-\[40px\] {
   height: 40px;
+}
+
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .min-h-full {
@@ -2497,6 +2516,11 @@ body {
   padding-bottom: 6rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pt-32 {
   padding-top: 8rem;
 }
@@ -2765,6 +2789,10 @@ body {
   opacity: 0.2;
 }
 
+.opacity-50 {
+  opacity: 0.5;
+}
+
 .shadow-button-primary {
   --tw-shadow: 0 10px 25px #5433ED52;
   --tw-shadow-colored: 0 10px 25px var(--tw-shadow-color);
@@ -2838,6 +2866,20 @@ body {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-secondary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 212 217 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-opacity-5:hover {
+  --tw-bg-opacity: 0.05;
+}
+
+.hover\:text-secondary:hover {
+  --tw-text-opacity: 1;
+  color: rgb(43 212 217 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-button-primary-hover:hover {
@@ -3414,6 +3456,10 @@ body {
 
   .lg\:w-\[100\%\] {
     width: 100%;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
   }
 
   .lg\:max-w-\[72\%\] {
