--- a/style-editor.css
+++ b/style-editor.css
@@ -1668,14 +1668,14 @@ body {
   margin-right: 3rem;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
 .my-12 {
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .my-4 {
@@ -1693,6 +1693,14 @@ body {
   margin-right: 1.75rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -1707,10 +1715,6 @@ body {
 
 .mt-12 {
   margin-top: 3rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .mt-5 {
@@ -1769,6 +1773,10 @@ body {
   margin-right: 1rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -1783,14 +1791,6 @@ body {
 
 .mt-24 {
   margin-top: 6rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
 }
 
 .mt-1 {
@@ -1857,6 +1857,10 @@ body {
   display: none;
 }
 
+.aspect-\[4\/3\] {
+  aspect-ratio: 4/3;
+}
+
 .aspect-\[16\/9\] {
   aspect-ratio: 16/9;
 }
@@ -1865,16 +1869,16 @@ body {
   aspect-ratio: 16/10.7;
 }
 
-.aspect-\[4\/3\] {
-  aspect-ratio: 4/3;
-}
-
 .aspect-\[16\/11\.5\] {
   aspect-ratio: 16/11.5;
 }
 
 .h-\[150px\] {
   height: 150px;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .h-40 {
@@ -1951,18 +1955,6 @@ body {
   height: 1.25rem;
 }
 
-.h-32 {
-  height: 8rem;
-}
-
-.h-\[14px\] {
-  height: 14px;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
 .min-h-full {
   min-height: 100%;
 }
@@ -1975,12 +1967,12 @@ body {
   width: 100%;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
 .w-6 {
   width: 1.5rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-56 {
@@ -2009,20 +2001,20 @@ body {
   width: 6rem;
 }
 
-.w-\[97\%\] {
-  width: 97%;
-}
-
-.w-\[30px\] {
-  width: 30px;
-}
-
 .w-11\/12 {
   width: 91.666667%;
 }
 
 .w-32 {
   width: 8rem;
+}
+
+.w-\[97\%\] {
+  width: 97%;
+}
+
+.w-\[30px\] {
+  width: 30px;
 }
 
 .w-auto {
@@ -2105,6 +2097,11 @@ body {
   flex: 1 1 0%;
 }
 
+.rotate-45 {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -2117,12 +2114,12 @@ body {
   list-style-type: none;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -2207,16 +2204,20 @@ body {
   overflow-wrap: break-word;
 }
 
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-\[2rem\] {
   border-radius: 2rem;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-md {
@@ -2228,10 +2229,6 @@ body {
 }
 
 .rounded-\[1\.5rem\] {
-  border-radius: 1.5rem;
-}
-
-.rounded-3xl {
   border-radius: 1.5rem;
 }
 
@@ -2399,6 +2396,10 @@ body {
      object-fit: cover;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-6 {
   padding: 1.5rem;
 }
@@ -2419,10 +2420,6 @@ body {
   padding: 0.75rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .p-1\.5 {
   padding: 0.375rem;
 }
@@ -2433,6 +2430,11 @@ body {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .px-3 {
@@ -2475,11 +2477,6 @@ body {
   padding-right: 2rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -2490,14 +2487,14 @@ body {
   padding-right: 0.5rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .py-8 {
@@ -2530,6 +2527,14 @@ body {
   padding-right: 1.75rem !important;
 }
 
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
 .pt-32 {
   padding-top: 8rem;
 }
@@ -2544,10 +2549,6 @@ body {
 
 .pb-5 {
   padding-bottom: 1.25rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
 }
 
 .pl-10 {
@@ -2594,6 +2595,14 @@ body {
   padding-bottom: 12rem;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
 .pt-36 {
   padding-top: 9rem;
 }
@@ -2608,18 +2617,6 @@ body {
 
 .pb-44 {
   padding-bottom: 11rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 
 .pt-24 {
@@ -2678,14 +2675,14 @@ body {
   text-align: center;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-xl {
@@ -2741,6 +2738,11 @@ body {
   line-height: 1;
 }
 
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(43 212 217 / var(--tw-text-opacity));
+}
+
 .text-primary {
   --tw-text-opacity: 1;
   color: rgb(84 51 237 / var(--tw-text-opacity));
@@ -2754,11 +2756,6 @@ body {
 .text-secondary-dark {
   --tw-text-opacity: 1;
   color: rgb(37 204 209 / var(--tw-text-opacity));
-}
-
-.text-secondary {
-  --tw-text-opacity: 1;
-  color: rgb(43 212 217 / var(--tw-text-opacity));
 }
 
 .text-\[\#9C90B5\] {
@@ -2836,6 +2833,10 @@ body {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition-opacity {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2908,16 +2909,21 @@ body {
   color: rgb(43 212 217 / var(--tw-text-opacity));
 }
 
+.hover\:shadow-custom-2:hover {
+  --tw-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0px 10px 20px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:shadow-button-primary-hover:hover {
   --tw-shadow: 0 13px 25px #5433ED52;
   --tw-shadow-colored: 0 13px 25px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-custom-2:hover {
-  --tw-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-  --tw-shadow-colored: 0px 10px 20px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .active\:scale-\[0\.97\]:active {
@@ -2947,12 +2953,12 @@ body {
     width: 0px;
   }
 
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:flex-row {
@@ -3003,6 +3009,10 @@ body {
     min-height: 48px;
   }
 
+  .md\:w-10\/12 {
+    width: 83.333333%;
+  }
+
   .md\:w-\[700px\] {
     width: 700px;
   }
@@ -3013,10 +3023,6 @@ body {
 
   .md\:w-\[38px\] {
     width: 38px;
-  }
-
-  .md\:w-10\/12 {
-    width: 83.333333%;
   }
 
   .md\:max-w-3xl {
@@ -3095,6 +3101,11 @@ body {
     text-align: right;
   }
 
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -3108,11 +3119,6 @@ body {
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
 
@@ -3420,6 +3426,10 @@ body {
     margin-right: 2rem;
   }
 
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .lg\:mt-24 {
     margin-top: 6rem;
   }
@@ -3438,10 +3448,6 @@ body {
 
   .lg\:mt-40 {
     margin-top: 10rem;
-  }
-
-  .lg\:mt-6 {
-    margin-top: 1.5rem;
   }
 
   .lg\:mt-2 {
@@ -3504,6 +3510,14 @@ body {
     width: 6rem;
   }
 
+  .lg\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .lg\:w-44 {
+    width: 11rem;
+  }
+
   .lg\:w-8\/12 {
     width: 66.666667%;
   }
@@ -3514,14 +3528,6 @@ body {
 
   .lg\:w-\[41px\] {
     width: 41px;
-  }
-
-  .lg\:w-5\/12 {
-    width: 41.666667%;
-  }
-
-  .lg\:w-44 {
-    width: 11rem;
   }
 
   .lg\:w-1\/4 {
@@ -3568,12 +3574,12 @@ body {
     max-width: 300px;
   }
 
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -3604,16 +3610,16 @@ body {
     background-color: transparent;
   }
 
+  .lg\:p-4 {
+    padding: 1rem;
+  }
+
   .lg\:p-6 {
     padding: 1.5rem;
   }
 
   .lg\:p-16 {
     padding: 4rem;
-  }
-
-  .lg\:p-4 {
-    padding: 1rem;
   }
 
   .lg\:p-8 {
@@ -3689,6 +3695,10 @@ body {
     padding-left: 1.5rem;
   }
 
+  .lg\:pr-10 {
+    padding-right: 2.5rem;
+  }
+
   .lg\:pt-0 {
     padding-top: 0px;
   }
@@ -3705,10 +3715,6 @@ body {
     padding-left: 3rem;
   }
 
-  .lg\:pr-10 {
-    padding-right: 2.5rem;
-  }
-
   .lg\:pt-32 {
     padding-top: 8rem;
   }
@@ -3723,6 +3729,11 @@ body {
 
   .lg\:pl-0 {
     padding-left: 0px;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .lg\:text-5xl {
@@ -3742,11 +3753,6 @@ body {
 
   .lg\:text-lg {
     font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 
