--- a/style.css
+++ b/style.css
@@ -2079,14 +2079,14 @@ body {
   margin-right: 3rem;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
 .my-12 {
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .my-4 {
@@ -2104,6 +2104,14 @@ body {
   margin-right: 1.75rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -2118,10 +2126,6 @@ body {
 
 .mt-12 {
   margin-top: 3rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .mt-5 {
@@ -2180,6 +2184,10 @@ body {
   margin-right: 1rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -2194,14 +2202,6 @@ body {
 
 .mt-24 {
   margin-top: 6rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
 }
 
 .mt-1 {
@@ -2268,6 +2268,10 @@ body {
   display: none;
 }
 
+.aspect-\[4\/3\] {
+  aspect-ratio: 4/3;
+}
+
 .aspect-\[16\/9\] {
   aspect-ratio: 16/9;
 }
@@ -2276,16 +2280,16 @@ body {
   aspect-ratio: 16/10.7;
 }
 
-.aspect-\[4\/3\] {
-  aspect-ratio: 4/3;
-}
-
 .aspect-\[16\/11\.5\] {
   aspect-ratio: 16/11.5;
 }
 
 .h-\[150px\] {
   height: 150px;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .h-40 {
@@ -2362,18 +2366,6 @@ body {
   height: 1.25rem;
 }
 
-.h-32 {
-  height: 8rem;
-}
-
-.h-\[14px\] {
-  height: 14px;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
 .min-h-full {
   min-height: 100%;
 }
@@ -2386,12 +2378,12 @@ body {
   width: 100%;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
 .w-6 {
   width: 1.5rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-56 {
@@ -2420,20 +2412,20 @@ body {
   width: 6rem;
 }
 
-.w-\[97\%\] {
-  width: 97%;
-}
-
-.w-\[30px\] {
-  width: 30px;
-}
-
 .w-11\/12 {
   width: 91.666667%;
 }
 
 .w-32 {
   width: 8rem;
+}
+
+.w-\[97\%\] {
+  width: 97%;
+}
+
+.w-\[30px\] {
+  width: 30px;
 }
 
 .w-auto {
@@ -2516,6 +2508,11 @@ body {
   flex: 1 1 0%;
 }
 
+.rotate-45 {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -2528,12 +2525,12 @@ body {
   list-style-type: none;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -2618,16 +2615,20 @@ body {
   overflow-wrap: break-word;
 }
 
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-\[2rem\] {
   border-radius: 2rem;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-md {
@@ -2639,10 +2640,6 @@ body {
 }
 
 .rounded-\[1\.5rem\] {
-  border-radius: 1.5rem;
-}
-
-.rounded-3xl {
   border-radius: 1.5rem;
 }
 
@@ -2810,6 +2807,10 @@ body {
      object-fit: cover;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-6 {
   padding: 1.5rem;
 }
@@ -2830,10 +2831,6 @@ body {
   padding: 0.75rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .p-1\.5 {
   padding: 0.375rem;
 }
@@ -2844,6 +2841,11 @@ body {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .px-3 {
@@ -2886,11 +2888,6 @@ body {
   padding-right: 2rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -2901,14 +2898,14 @@ body {
   padding-right: 0.5rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .py-8 {
@@ -2941,6 +2938,14 @@ body {
   padding-right: 1.75rem !important;
 }
 
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
 .pt-32 {
   padding-top: 8rem;
 }
@@ -2955,10 +2960,6 @@ body {
 
 .pb-5 {
   padding-bottom: 1.25rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
 }
 
 .pl-10 {
@@ -3005,6 +3006,14 @@ body {
   padding-bottom: 12rem;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
 .pt-36 {
   padding-top: 9rem;
 }
@@ -3019,18 +3028,6 @@ body {
 
 .pb-44 {
   padding-bottom: 11rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 
 .pt-24 {
@@ -3089,14 +3086,14 @@ body {
   text-align: center;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-xl {
@@ -3152,6 +3149,11 @@ body {
   line-height: 1;
 }
 
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(43 212 217 / var(--tw-text-opacity));
+}
+
 .text-primary {
   --tw-text-opacity: 1;
   color: rgb(84 51 237 / var(--tw-text-opacity));
@@ -3165,11 +3167,6 @@ body {
 .text-secondary-dark {
   --tw-text-opacity: 1;
   color: rgb(37 204 209 / var(--tw-text-opacity));
-}
-
-.text-secondary {
-  --tw-text-opacity: 1;
-  color: rgb(43 212 217 / var(--tw-text-opacity));
 }
 
 .text-\[\#9C90B5\] {
@@ -3247,6 +3244,10 @@ body {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition-opacity {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -3319,16 +3320,21 @@ body {
   color: rgb(43 212 217 / var(--tw-text-opacity));
 }
 
+.hover\:shadow-custom-2:hover {
+  --tw-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0px 10px 20px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:shadow-button-primary-hover:hover {
   --tw-shadow: 0 13px 25px #5433ED52;
   --tw-shadow-colored: 0 13px 25px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-custom-2:hover {
-  --tw-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-  --tw-shadow-colored: 0px 10px 20px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .active\:scale-\[0\.97\]:active {
@@ -3358,12 +3364,12 @@ body {
     width: 0px;
   }
 
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:flex-row {
@@ -3414,6 +3420,10 @@ body {
     min-height: 48px;
   }
 
+  .md\:w-10\/12 {
+    width: 83.333333%;
+  }
+
   .md\:w-\[700px\] {
     width: 700px;
   }
@@ -3424,10 +3434,6 @@ body {
 
   .md\:w-\[38px\] {
     width: 38px;
-  }
-
-  .md\:w-10\/12 {
-    width: 83.333333%;
   }
 
   .md\:max-w-3xl {
@@ -3506,6 +3512,11 @@ body {
     text-align: right;
   }
 
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -3519,11 +3530,6 @@ body {
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
 
@@ -3831,6 +3837,10 @@ body {
     margin-right: 2rem;
   }
 
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .lg\:mt-24 {
     margin-top: 6rem;
   }
@@ -3849,10 +3859,6 @@ body {
 
   .lg\:mt-40 {
     margin-top: 10rem;
-  }
-
-  .lg\:mt-6 {
-    margin-top: 1.5rem;
   }
 
   .lg\:mt-2 {
@@ -3915,6 +3921,14 @@ body {
     width: 6rem;
   }
 
+  .lg\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .lg\:w-44 {
+    width: 11rem;
+  }
+
   .lg\:w-8\/12 {
     width: 66.666667%;
   }
@@ -3925,14 +3939,6 @@ body {
 
   .lg\:w-\[41px\] {
     width: 41px;
-  }
-
-  .lg\:w-5\/12 {
-    width: 41.666667%;
-  }
-
-  .lg\:w-44 {
-    width: 11rem;
   }
 
   .lg\:w-1\/4 {
@@ -3979,12 +3985,12 @@ body {
     max-width: 300px;
   }
 
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -4015,16 +4021,16 @@ body {
     background-color: transparent;
   }
 
+  .lg\:p-4 {
+    padding: 1rem;
+  }
+
   .lg\:p-6 {
     padding: 1.5rem;
   }
 
   .lg\:p-16 {
     padding: 4rem;
-  }
-
-  .lg\:p-4 {
-    padding: 1rem;
   }
 
   .lg\:p-8 {
@@ -4100,6 +4106,10 @@ body {
     padding-left: 1.5rem;
   }
 
+  .lg\:pr-10 {
+    padding-right: 2.5rem;
+  }
+
   .lg\:pt-0 {
     padding-top: 0px;
   }
@@ -4116,10 +4126,6 @@ body {
     padding-left: 3rem;
   }
 
-  .lg\:pr-10 {
-    padding-right: 2.5rem;
-  }
-
   .lg\:pt-32 {
     padding-top: 8rem;
   }
@@ -4134,6 +4140,11 @@ body {
 
   .lg\:pl-0 {
     padding-left: 0px;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .lg\:text-5xl {
@@ -4153,11 +4164,6 @@ body {
 
   .lg\:text-lg {
     font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 
