--- a/assets/custom.css
+++ b/assets/custom.css
@@ -34,7 +34,7 @@ p {
   display: none;
 }
 
-ul#menu-learning-center>li:hover ul.sub-menu {
+ul#menu-learning-center>li:hover>ul.sub-menu {
   display: flex;
 }
 
@@ -57,7 +57,8 @@ ul#menu-learning-center>li>ul.sub-menu {
   max-width: 1232px;
   width: 100%;
   left: 50%;
-  transform: translateX(-50%) translateY(15%);
+  transform: translateX(-50%);
+  top: 90px;
 }
 
 ul#menu-learning-center>li>ul.sub-menu>li>a {
@@ -340,6 +341,24 @@ span.playIcon::before {
   box-shadow: -3px 4px 4px rgba(228, 220, 220, .192), 0 8px 11px 2px rgba(204, 204, 204, .5) !important;
 }
 
+.custompost_center_search {
+  border-color: rgba(43, 212, 217, 0.64);
+}
+
+.custompost_center_search:focus-within {
+  transition: box-shadow .3s ease-in-out;
+  box-shadow: -3px 4px 4px rgba(228, 220, 220, .192), 0 8px 11px 2px rgba(204, 204, 204, .5) !important;
+}
+
+.video_search {
+  border-color: rgba(43, 212, 217, 0.64);
+}
+
+.video_search:focus-within {
+  transition: box-shadow .3s ease-in-out;
+  box-shadow: -3px 4px 4px rgba(228, 220, 220, .192), 0 8px 11px 2px rgba(204, 204, 204, .5) !important;
+}
+
 .search_results {
   border: 1px solid rgba(43, 212, 217, 0.64);
   left: 0;
@@ -350,3 +369,91 @@ span.playIcon::before {
   top: 41px;
   background: white;
 }
+
+ul#menu-learning-center>li.menu-item-has-children a {
+  position: relative;
+}
+
+ul#menu-learning-center>li.menu-item-has-children>a::after {
+  content: '';
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  background: url('/wp-content/uploads/menu-vector.svg');
+  background-repeat: no-repeat;
+  top: 6px;
+  right: -14px;
+  transform: rotate(180deg);
+}
+
+ul#menu-learning-center>li.menu-item-has-children:hover a::after {
+  transform: rotate(0deg);
+  top: 9px;
+}
+
+.archive_description p {
+  font-weight: bold;
+}
+
+.s_getting_start_body>div img {
+  background: url(image.png), linear-gradient(115.55deg, #5460E5 1.31%, #63D2DE 100%);
+}
+
+@media only screen and (max-width:1279px) {
+  .menu-footer-menu-container {
+    width:100%;
+  }
+}
+
+.mobile_drawer {
+  transform:translateX(100%);
+  transition:transform 0.3s;
+}
+
+.open {
+  transform:translateX(20px);
+}
+
+.mobile_nav ul#primary-menu{
+  display:block !important;
+  margin-left:0;
+}
+.mobile_nav ul#primary-menu .menu-item {
+  padding: 0.5rem 15px;
+}
+
+.mobile_nav ul#menu-learning-center-1{
+  display:block !important;
+  margin-left:0;
+}
+
+.mobile_nav ul#menu-learning-center-1 .menu-item {
+  padding: 0.5rem 15px;
+}
+
+/* .mobile_nav ul#menu-learning-center-1 ul.sub-menu{
+  display:none;
+} */
+.mobile_nav ul#menu-learning-center-1>li.menu-item-has-children>a {
+  position:relative;
+}
+.mobile_nav ul#menu-learning-center-1>li.menu-item-has-children>a::after {
+  content: '';
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  background: url('/wp-content/uploads/menu-vector.svg');
+  background-repeat: no-repeat;
+  top: 6px;
+  right: -30px;
+  transform: rotate(180deg);
+}
+
+/* .mobile_nav ul#menu-learning-center-1>li.menu-item-has-children:hover a::after {
+  transform: rotate(0deg);
+  top: 9px;
+} */
+
+/* .mobile_nav ul#menu-learning-center-1>li.menu-item-has-children:hover ul.sub-menu {
+  display:block;
+} */
