--- a/style-editor.css
+++ b/style-editor.css
@@ -1834,6 +1834,10 @@ body {
   margin-bottom: 0.75rem;
 }
 
+.mb-60 {
+  margin-bottom: 15rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -2251,10 +2255,6 @@ body {
 
 .overflow-hidden {
   overflow: hidden;
-}
-
-.overflow-scroll {
-  overflow: scroll;
 }
 
 .overflow-y-scroll {
@@ -3245,6 +3245,10 @@ body {
 
   .md\:pb-60 {
     padding-bottom: 15rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:text-right {
