--- a/style-editor.css
+++ b/style-editor.css
@@ -1710,6 +1710,11 @@ body {
   margin-bottom: 2rem;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -1996,6 +2001,10 @@ body {
   min-height: 100%;
 }
 
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .w-40 {
   width: 10rem;
 }
@@ -2076,6 +2085,10 @@ body {
 
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .min-w-\[400px\] {
@@ -2301,6 +2314,10 @@ body {
   border-radius: 1.5rem;
 }
 
+.rounded-bl-\[10rem\] {
+  border-bottom-left-radius: 10rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -2506,6 +2523,10 @@ body {
   padding: 0.5rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2614,6 +2635,11 @@ body {
 .py-\[1rem\] {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 
 .pr-4 {
@@ -2764,6 +2790,10 @@ body {
   padding-top: 5rem;
 }
 
+.pb-28 {
+  padding-bottom: 7rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2813,6 +2843,11 @@ body {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-bold {
@@ -2879,6 +2914,11 @@ body {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -2928,6 +2968,11 @@ body {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .drop-shadow-\[0_35px_20px_\#0D10250F\] {
   --tw-drop-shadow: drop-shadow(0 35px 20px #0D10250F);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2935,6 +2980,11 @@ body {
 
 .drop-shadow-\[55px_55px_69px_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
   --tw-drop-shadow: drop-shadow(55px 55px 69px rgba(0,0,0,0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.drop-shadow-xl {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -3616,8 +3666,16 @@ body {
     margin-left: 5rem;
   }
 
+  .lg\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
   .lg\:block {
     display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
   }
 
   .lg\:aspect-\[16\/10\.7\] {
@@ -3750,6 +3808,10 @@ body {
 
   .lg\:items-start {
     align-items: flex-start;
+  }
+
+  .lg\:justify-end {
+    justify-content: flex-end;
   }
 
   .lg\:gap-32 {
@@ -4539,6 +4601,10 @@ body {
 
   .xl\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .xl\:pb-14 {
+    padding-bottom: 3.5rem;
   }
 
   .xl\:text-left {
