--- a/style-editor.css
+++ b/style-editor.css
@@ -1690,19 +1690,9 @@ body {
   margin-right: 3rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
-}
-
-.mx-7 {
-  margin-left: 1.75rem;
-  margin-right: 1.75rem;
 }
 
 .my-8 {
@@ -1710,9 +1700,14 @@ body {
   margin-bottom: 2rem;
 }
 
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mx-7 {
+  margin-left: 1.75rem;
+  margin-right: 1.75rem;
 }
 
 .mb-10 {
@@ -1759,16 +1754,20 @@ body {
   margin-top: 3rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
 
 .mt-16 {
   margin-top: 4rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
 }
 
 .mb-6 {
@@ -1823,20 +1822,16 @@ body {
   margin-top: 200px;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
 
 .mr-3 {
   margin-right: 0.75rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 
 .mb-60 {
@@ -1873,6 +1868,10 @@ body {
 
 .-mb-1 {
   margin-bottom: -0.25rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .block {
@@ -1989,6 +1988,14 @@ body {
   height: 1.25rem;
 }
 
+.h-\[50vh\] {
+  height: 50vh;
+}
+
+.h-\[248px\] {
+  height: 248px;
+}
+
 .max-h-\[250px\] {
   max-height: 250px;
 }
@@ -1997,12 +2004,12 @@ body {
   min-height: 70px;
 }
 
-.min-h-full {
-  min-height: 100%;
-}
-
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-full {
+  min-height: 100%;
 }
 
 .w-40 {
@@ -2063,6 +2070,10 @@ body {
   width: 97%;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-auto {
   width: auto;
 }
@@ -2071,8 +2082,8 @@ body {
   width: 2.5rem;
 }
 
-.w-80 {
-  width: 20rem;
+.w-\[32rem\] {
+  width: 32rem;
 }
 
 .w-3 {
@@ -2085,10 +2096,6 @@ body {
 
 .w-\[300px\] {
   width: 300px;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .min-w-\[400px\] {
@@ -2511,6 +2518,10 @@ body {
   padding: 0.75rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .p-1\.5 {
   padding: 0.375rem;
 }
@@ -2521,10 +2532,6 @@ body {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .py-2 {
@@ -2582,6 +2589,11 @@ body {
   padding-bottom: 4rem;
 }
 
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -2597,14 +2609,14 @@ body {
   padding-right: 1.25rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .px-10 {
@@ -2635,11 +2647,6 @@ body {
 .py-\[1rem\] {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
 }
 
 .pr-4 {
@@ -2688,6 +2695,10 @@ body {
 
 .pt-28 {
   padding-top: 7rem;
+}
+
+.pb-28 {
+  padding-bottom: 7rem;
 }
 
 .pb-16 {
@@ -2790,10 +2801,6 @@ body {
   padding-top: 5rem;
 }
 
-.pb-28 {
-  padding-bottom: 7rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -2862,6 +2869,10 @@ body {
   text-transform: uppercase;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
@@ -2872,6 +2883,10 @@ body {
 
 .leading-none {
   line-height: 1;
+}
+
+.tracking-tight {
+  letter-spacing: -0.025em;
 }
 
 .text-secondary {
@@ -2909,14 +2924,14 @@ body {
   color: rgb(113 113 113 / var(--tw-text-opacity));
 }
 
-.text-text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2973,6 +2988,11 @@ body {
   outline-offset: 2px;
 }
 
+.drop-shadow-xl {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .drop-shadow-\[0_35px_20px_\#0D10250F\] {
   --tw-drop-shadow: drop-shadow(0 35px 20px #0D10250F);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2980,11 +3000,6 @@ body {
 
 .drop-shadow-\[55px_55px_69px_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
   --tw-drop-shadow: drop-shadow(55px 55px 69px rgba(0,0,0,0.1));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.drop-shadow-xl {
-  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -3116,6 +3131,10 @@ body {
     width: 0px;
   }
 
+  .sm\:w-96 {
+    width: 24rem;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -3170,6 +3189,10 @@ body {
 
   .md\:flex {
     display: flex;
+  }
+
+  .md\:grid {
+    display: grid;
   }
 
   .md\:max-h-\[300px\] {
@@ -3258,6 +3281,11 @@ body {
     padding-bottom: 0px;
   }
 
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -3266,11 +3294,6 @@ body {
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .md\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   .md\:pl-\[30px\] {
@@ -3614,6 +3637,10 @@ body {
     margin-top: 0px;
   }
 
+  .lg\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
   .lg\:mt-10 {
     margin-top: 2.5rem;
   }
@@ -3664,10 +3691,6 @@ body {
 
   .lg\:ml-20 {
     margin-left: 5rem;
-  }
-
-  .lg\:mb-28 {
-    margin-bottom: 7rem;
   }
 
   .lg\:block {
@@ -3752,10 +3775,6 @@ body {
 
   .lg\:w-3\/4 {
     width: 75%;
-  }
-
-  .lg\:w-96 {
-    width: 24rem;
   }
 
   .lg\:w-\[55\%\] {
@@ -3871,6 +3890,11 @@ body {
     padding-right: 3rem;
   }
 
+  .lg\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .lg\:pr-10 {
     padding-right: 2.5rem;
   }
@@ -3953,6 +3977,10 @@ body {
 
   .lg\:pl-0 {
     padding-left: 0px;
+  }
+
+  .lg\:pb-60 {
+    padding-bottom: 15rem;
   }
 
   .lg\:text-5xl {
@@ -4595,16 +4623,12 @@ body {
     padding-right: 4rem;
   }
 
-  .xl\:pb-20 {
-    padding-bottom: 5rem;
+  .xl\:pb-14 {
+    padding-bottom: 3.5rem;
   }
 
   .xl\:pb-0 {
     padding-bottom: 0px;
-  }
-
-  .xl\:pb-14 {
-    padding-bottom: 3.5rem;
   }
 
   .xl\:text-left {
@@ -4645,6 +4669,10 @@ body {
 
   .\32xl\:pb-\[5rem\] {
     padding-bottom: 5rem;
+  }
+
+  .\32xl\:pt-36 {
+    padding-top: 9rem;
   }
 
   @media (min-width: 1024px) {
