--- a/style.css
+++ b/style.css
@@ -2101,19 +2101,9 @@ body {
   margin-right: 3rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
-}
-
-.mx-7 {
-  margin-left: 1.75rem;
-  margin-right: 1.75rem;
 }
 
 .my-8 {
@@ -2121,9 +2111,14 @@ body {
   margin-bottom: 2rem;
 }
 
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mx-7 {
+  margin-left: 1.75rem;
+  margin-right: 1.75rem;
 }
 
 .mb-10 {
@@ -2170,16 +2165,20 @@ body {
   margin-top: 3rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
 
 .mt-16 {
   margin-top: 4rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
 }
 
 .mb-6 {
@@ -2234,20 +2233,16 @@ body {
   margin-top: 200px;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
 
 .mr-3 {
   margin-right: 0.75rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 
 .mb-60 {
@@ -2284,6 +2279,10 @@ body {
 
 .-mb-1 {
   margin-bottom: -0.25rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .block {
@@ -2400,6 +2399,14 @@ body {
   height: 1.25rem;
 }
 
+.h-\[50vh\] {
+  height: 50vh;
+}
+
+.h-\[248px\] {
+  height: 248px;
+}
+
 .max-h-\[250px\] {
   max-height: 250px;
 }
@@ -2408,12 +2415,12 @@ body {
   min-height: 70px;
 }
 
-.min-h-full {
-  min-height: 100%;
-}
-
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-full {
+  min-height: 100%;
 }
 
 .w-40 {
@@ -2474,6 +2481,10 @@ body {
   width: 97%;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-auto {
   width: auto;
 }
@@ -2482,8 +2493,8 @@ body {
   width: 2.5rem;
 }
 
-.w-80 {
-  width: 20rem;
+.w-\[32rem\] {
+  width: 32rem;
 }
 
 .w-3 {
@@ -2496,10 +2507,6 @@ body {
 
 .w-\[300px\] {
   width: 300px;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .min-w-\[400px\] {
@@ -2922,6 +2929,10 @@ body {
   padding: 0.75rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .p-1\.5 {
   padding: 0.375rem;
 }
@@ -2932,10 +2943,6 @@ body {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .py-2 {
@@ -2993,6 +3000,11 @@ body {
   padding-bottom: 4rem;
 }
 
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -3008,14 +3020,14 @@ body {
   padding-right: 1.25rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .px-10 {
@@ -3046,11 +3058,6 @@ body {
 .py-\[1rem\] {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
 }
 
 .pr-4 {
@@ -3099,6 +3106,10 @@ body {
 
 .pt-28 {
   padding-top: 7rem;
+}
+
+.pb-28 {
+  padding-bottom: 7rem;
 }
 
 .pb-16 {
@@ -3201,10 +3212,6 @@ body {
   padding-top: 5rem;
 }
 
-.pb-28 {
-  padding-bottom: 7rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -3273,6 +3280,10 @@ body {
   text-transform: uppercase;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
@@ -3283,6 +3294,10 @@ body {
 
 .leading-none {
   line-height: 1;
+}
+
+.tracking-tight {
+  letter-spacing: -0.025em;
 }
 
 .text-secondary {
@@ -3320,14 +3335,14 @@ body {
   color: rgb(113 113 113 / var(--tw-text-opacity));
 }
 
-.text-text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -3384,6 +3399,11 @@ body {
   outline-offset: 2px;
 }
 
+.drop-shadow-xl {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .drop-shadow-\[0_35px_20px_\#0D10250F\] {
   --tw-drop-shadow: drop-shadow(0 35px 20px #0D10250F);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -3391,11 +3411,6 @@ body {
 
 .drop-shadow-\[55px_55px_69px_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
   --tw-drop-shadow: drop-shadow(55px 55px 69px rgba(0,0,0,0.1));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.drop-shadow-xl {
-  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -3527,6 +3542,10 @@ body {
     width: 0px;
   }
 
+  .sm\:w-96 {
+    width: 24rem;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -3581,6 +3600,10 @@ body {
 
   .md\:flex {
     display: flex;
+  }
+
+  .md\:grid {
+    display: grid;
   }
 
   .md\:max-h-\[300px\] {
@@ -3669,6 +3692,11 @@ body {
     padding-bottom: 0px;
   }
 
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -3677,11 +3705,6 @@ body {
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .md\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   .md\:pl-\[30px\] {
@@ -4025,6 +4048,10 @@ body {
     margin-top: 0px;
   }
 
+  .lg\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
   .lg\:mt-10 {
     margin-top: 2.5rem;
   }
@@ -4075,10 +4102,6 @@ body {
 
   .lg\:ml-20 {
     margin-left: 5rem;
-  }
-
-  .lg\:mb-28 {
-    margin-bottom: 7rem;
   }
 
   .lg\:block {
@@ -4163,10 +4186,6 @@ body {
 
   .lg\:w-3\/4 {
     width: 75%;
-  }
-
-  .lg\:w-96 {
-    width: 24rem;
   }
 
   .lg\:w-\[55\%\] {
@@ -4282,6 +4301,11 @@ body {
     padding-right: 3rem;
   }
 
+  .lg\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .lg\:pr-10 {
     padding-right: 2.5rem;
   }
@@ -4364,6 +4388,10 @@ body {
 
   .lg\:pl-0 {
     padding-left: 0px;
+  }
+
+  .lg\:pb-60 {
+    padding-bottom: 15rem;
   }
 
   .lg\:text-5xl {
@@ -5006,16 +5034,12 @@ body {
     padding-right: 4rem;
   }
 
-  .xl\:pb-20 {
-    padding-bottom: 5rem;
+  .xl\:pb-14 {
+    padding-bottom: 3.5rem;
   }
 
   .xl\:pb-0 {
     padding-bottom: 0px;
-  }
-
-  .xl\:pb-14 {
-    padding-bottom: 3.5rem;
   }
 
   .xl\:text-left {
@@ -5056,6 +5080,10 @@ body {
 
   .\32xl\:pb-\[5rem\] {
     padding-bottom: 5rem;
+  }
+
+  .\32xl\:pt-36 {
+    padding-top: 9rem;
   }
 
   @media (min-width: 1024px) {
